<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/xtv_nombre"/>
        <EditText
            android:id="@+id/xetNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/xtv_fecha"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/xetFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/xbtnFecha"
                android:enabled="false"
                android:inputType="date"/>
            <ImageButton
                android:id="@+id/xbtnFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/calendar32"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/xtv_hora"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/xetHora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/xbtnHora"
                android:enabled="false"
                android:inputType="time"/>
            <ImageButton
                android:id="@+id/xbtnHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/clock32"/>
        </RelativeLayout>
        <Button
            android:id="@+id/xbtnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xbtn_guardar"/>
        <Button
            android:id="@+id/xbtnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xbtn_mostrar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/xtv_lista"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/xtv_encabezados"/>
        <TextView
            android:id="@+id/xtvLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>